--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@ function initMap() {
     updateZoomLevelIndicator(); //Update zoom level indicator
     clearTimeout(debounceTimer);
     debounceTimer = setTimeout(() => {
-      if (map.getZoom() >= 15) {
+      if (map.getZoom() >= 17) {
         populateTableWithVisibleStreets();
       } else {
         clearTable();
@@ -38,7 +38,7 @@ function initMap() {
   google.maps.event.addListener(map, "bounds_changed", () => {
     clearTimeout(debounceTimer);
     debounceTimer = setTimeout(() => {
-      if (map.getZoom() >= 15) {
+      if (map.getZoom() >= 17) {
         populateTableWithVisibleStreets();
       } else {
         clearTable();
@@ -86,7 +86,7 @@ function updateZoomLevelIndicator() {
   const zoomLevel = map.getZoom();
   zoomLevelElement.textContent = zoomLevel;
 
-  if (zoomLevel > 15) {
+  if (zoomLevel >= 17) {
     zoomLevelContainer.classList.add("hidden");
   } else {
     zoomLevelContainer.classList.remove("hidden");
@@ -223,7 +223,7 @@ function clearTable() {
       table.deleteRow(1);
     }
 
-    // Add a message when zoom level is below 15
+    // Add a message when zoom level is below 17
     const row = table.insertRow();
     const cell = row.insertCell();
     cell.textContent = "Zoom in to see Streetview data";
@@ -401,7 +401,7 @@ function showPopup(latLng, imageDate, status) {
   <h3>How to use:</h3>
   <ol>
     <li>Open the web app in your browser. You will see a Google Map view on the left side of the screen and an initially empty data table on the right side.</li>
-    <li>Navigate the map as desired. When you reach zoom level 15 or higher, the app will automatically populate the data table with the visible street names and their latest Street View image date.</li>
+    <li>Navigate the map as desired. When you reach zoom level 17 or higher, the app will automatically populate the data table with the visible street names and their latest Street View image date.</li>
     <li>If there is no Street View imagery available for a specific street, the table will display "No imagery here" in the date column.</li>
     <li>To view the location of a particular street on the map, click on the street name in the data table. A marker will appear on the map.</li>
     <li>Click on a location on the map to view the Street View image date for that spot in a popup. If there is no Street View imagery available for the clicked location, the popup will display "No imagery here".</li>
